# HEonGPU

./: .clang-format  .gitignore  .gitmodules  .readthedocs.yaml  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
benchmark/: CMakeLists.txt  benchmark_bfv.cpp  benchmark_bfv.cu  benchmark_ckks.cpp  benchmark_ckks.cu  benchmark_tfhe.cpp  benchmark_tfhe.cu
docs/: Doxyfile  (+14 more)
example/basic/: 10_basic_ckks_logic.cpp  10_bfv_serialization.cu  10_multi_stream_usage_way2.cpp  10_profiling.cu  11_bfv_serialization.cpp  11_bootstrap_prof.cu  11_ckks_serialization.cu  12_basic_tfhe.cu  12_ckks_serialization.cpp  13_basic_tfhe.cpp  13_basic_tfhe.cu  13_poly_convolution_ckks.cu  14_basic_convfhe_single.cu  15_demo_conv_relu_chain.cu  16_ckks_rotation_parallel.cpp  17_ckks_comparison.cpp  1_basic_bfv.cpp  1_basic_bfv.cu  2_basic_ckks.cpp  2_basic_ckks.cu  3_basic_memorypool_config.cpp  3_basic_memorypool_config.cu  3_switchkey_methods_bfv.cu  4_switchkey_methods_bfv.cpp  4_switchkey_methods_bfv.cu  4_switchkey_methods_ckks.cu  5_default_stream_usage.cu  5_switchkey_methods_ckks.cpp  6_ckks_coefficient_encoding.cpp  6_default_stream_usage.cpp  6_multi_stream_usage_way1.cu  7_ckks_coeff_to_slot_roundtrip.cpp  7_multi_stream_usage_way1.cpp  7_multi_stream_usage_way1.cu  7_multi_stream_usage_way2.cu  8_basic_bfv_logic.cu  8_default_stream_usage.cpp  8_multi_stream_usage_way2.cpp  9_basic_bfv_logic.cpp  9_basic_bfv_logic.cu  (+9 more)
example/bootstrapping/: 1_ckks_bootstrapping.cu  1_ckks_regular_bootstrapping.cpp  1_ckks_regular_bootstrapping.cu  2_ckks_slim_bootstrapping.cpp  2_ckks_slim_bootstrapping.cu  3_ckks_bit_bootstrapping.cpp  3_ckks_bit_bootstrapping.cu  4_ckks_gate_bootstrapping.cpp  4_ckks_gate_bootstrapping.cu  5_ckks_regular_bootstrapping_v2.cpp  5_ckks_regular_bootstrapping_v2.cu  6_ckks_slim_bootstrapping_v2.cu  CMakeLists.txt  README.md
example/lowmem_resnet20_slot/: CMakeLists.txt  LowMemAdapter.h  Utils.h  lowmem_resnet20_slot.cu
example/mpc/: 1_multiparty_computation_bfv.cpp  1_multiparty_computation_bfv.cu  2_multiparty_computation_ckks.cpp  2_multiparty_computation_ckks.cu  3_mpc_collective_bootstrapping_bfv.cpp  3_mpc_collective_bootstrapping_bfv.cu  4_mpc_collective_bootstrapping_ckks.cpp  4_mpc_collective_bootstrapping_ckks.cu  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/heongpu/: CMakeLists.txt
src/heongpu/include/host/: ciphertext.cuh  decryptor.cuh  encoder.cuh  encryptor.cuh  heongpu.cuh  keygenerator.cuh  keyswitch.cuh  operator.cuh  plaintext.cuh  publickey.cuh  secretkey.cuh
src/heongpu/include/kernel/: addition.cuh  bootstrapping.cuh  context.cuh  contextpool.cuh  decryption.cuh  defines.h  encoding.cuh  encryption.cuh  keygeneration.cuh  multiplication.cuh  random.cuh  small_ntt.cuh  switchkey.cuh
src/heongpu/include/util/: bigintegerarith.cuh  defaultmodulus.cuh  devicevector.cuh  hostvector.cuh  memorypool.cuh  new_random.cuh  random.cuh  schemes.h  secstdparams.h  serializer.h  storagemanager.cuh  util.cuh
src/heongpu/lib/host/: ciphertext.cu  decryptor.cu  encoder.cu  encryptor.cu  heongpu.cpp  heongpu.cu  keygenerator.cu  keyswitch.cu  operator.cu  plaintext.cu  publickey.cu  secretkey.cu
src/heongpu/lib/kernel/: addition.cu  bootstrapping.cu  context.cu  contextpool.cpp  contextpool.cu  decryption.cu  encoding.cu  encryption.cu  keygeneration.cu  multiplication.cu  random.cu  small_ntt.cu  switchkey.cu
src/heongpu/lib/util/: defaultmodulus.cpp  defaultmodulus.cu  memorypool.cu  new_random.cu  random.cu  serializer.cpp  util.cu
src/include/heongpu/: heongpu.hpp
src/include/heongpu/kernel/: addition.cuh  bootstrapping.cuh  contextpool.hpp  convolution.cuh  decryption.cuh  defines.h  encoding.cuh  encryption.cuh  keygeneration.cuh  multiplication.cuh  small_ntt.cuh  switchkey.cuh  transform.cuh
src/include/heongpu/util/: bigintegerarith.cuh  defaultmodulus.hpp  devicevector.cuh  hostvector.cuh  memorypool.cuh  random.cuh  schemes.h  secstdparams.h  serializer.h  storagemanager.cuh  util.cuh
src/lib/: heongpu.cpp
src/lib/host/bfv/: ciphertext.cu  context.cu  decryptor.cu  encoder.cu  encryptor.cu  evaluationkey.cu  keygenerator.cu  mpcmanager.cu  operator.cu  plaintext.cu  publickey.cu  secretkey.cu
src/lib/host/ckks/: batchconv_pack.cu  chebyshev_interpolation.cu  ciphertext.cu  context.cu  conv_bootstrap.cu  conv_relu_layer.cu  convolution.cu  cosine_approx.cu  decryptor.cu  encoder.cu  encryptor.cu  evaluationkey.cu  keygenerator.cu  mpcmanager.cu  operator.cu  plaintext.cu  precision.cu  publickey.cu  secretkey.cu
src/lib/host/tfhe/: ciphertext.cu  context.cu  decryptor.cu  encryptor.cu  evaluationkey.cu  keygenerator.cu  operator.cu  secretkey.cu
src/lib/kernel/: addition.cu  bootstrapping.cu  contextpool.cpp  convolution.cu  decryption.cu  encoding.cu  encryption.cu  keygeneration.cu  multiplication.cu  small_ntt.cu  switchkey.cu  transform.cu
src/lib/util/: defaultmodulus.cpp  memorypool.cu  random.cu  serializer.cpp  util.cu
test/: CMakeLists.txt  test_bfv_addition.cpp  test_bfv_addition.cu  test_bfv_encoding.cpp  test_bfv_encoding.cu  test_bfv_encryption.cpp  test_bfv_encryption.cu  test_bfv_multiplication.cpp  test_bfv_multiplication.cu  test_bfv_relinearization.cpp  test_bfv_relinearization.cu  test_bfv_rotation_method_1.cpp  test_bfv_rotation_method_1.cu  test_bfv_rotation_method_2.cpp  test_bfv_rotation_method_2.cu  test_ckks_addition.cpp  test_ckks_addition.cu  test_ckks_encoding.cpp  test_ckks_encoding.cu  test_ckks_encryption.cpp  test_ckks_encryption.cu  test_ckks_multiplication.cpp  test_ckks_multiplication.cu  test_ckks_relinearization.cpp  test_ckks_relinearization.cu  test_ckks_rotation_method_1.cpp  test_ckks_rotation_method_1.cu  test_ckks_rotation_method_1_part_1.cu  test_ckks_rotation_method_1_part_2.cu  test_ckks_rotation_method_1_part_3.cu  test_ckks_rotation_method_2.cpp  test_ckks_rotation_method_2.cu  test_ckks_rotation_method_2_part_1.cu  test_ckks_rotation_method_2_part_2.cu  test_ckks_rotation_method_2_part_3.cu  test_poly_convolution_ckks.cu  test_tfhe_gate_boot.cpp  test_tfhe_gate_boot.cu
(+318 files in other folders)
